[gd_scene load_steps=5 format=3 uid="uid://fmspsby8266i"]

[ext_resource type="Script" uid="uid://dw0chd72mr2e6" path="res://ScenesAndScripts/UI/ui.gd" id="1_bts8l"]
[ext_resource type="Texture2D" uid="uid://cqrhc2gl0xm4w" path="res://icon.svg" id="1_xslc6"]
[ext_resource type="Theme" uid="uid://cqy5qwkgao8ks" path="res://ScenesAndScripts/Shaders/3rd_text.tres" id="3_fr2ux"]
[ext_resource type="PackedScene" uid="uid://hiwonrsdpxid" path="res://ScenesAndScripts/UI/settings.tscn" id="4_45nxl"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_bts8l")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 25

[node name="Pause" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("1_xslc6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
process_mode = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="LivesDisplay" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_xslc6")

[node name="NumberDisplay" type="Label" parent="MarginContainer/VBoxContainer/LivesDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_fr2ux")
text = "1"
horizontal_alignment = 1

[node name="HintsButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_xslc6")

[node name="Overlays" type="Node" parent="."]

[node name="Settings" parent="Overlays" instance=ExtResource("4_45nxl")]

[connection signal="pressed" from="MarginContainer/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HintsButton" to="." method="_on_hints_button_pressed"]
